Setup administrator management for  email and password